--- a/src/component/column/annotation.module.scss
+++ b/src/component/column/annotation.module.scss
@@ -17,6 +17,7 @@
 
 .annotation-item {
     width: 22px;
+    height: 22px;
     display: flex;
     justify-content: space-around;
     align-items: center;
